# hatch-docstring-description

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  README.rst  biome.jsonc  pyproject.toml
.github/workflows/: ci.yml  pub.yml
src/hatch_docstring_description/: __init__.py  hooks.py  read_description.py  read_description_hook.py
tests/: test_basic.py
